Embed plot in README

--- a/nhanes_analysis.ipynb
+++ b/nhanes_analysis.ipynb
@@ -58,11 +58,7 @@
     "## Limitations\n",
     "\n",
     "- **Cross-sectional data only**: NHANES is not longitudinal, so we cannot evaluate before-and-after treatment effects  \n",
-    "- **No dosage or duration data**: We only know whether a drug was reported in the past 30\n",
-    "\n",
-    "## Visual Summary\n",
-    "\n",
-    "![BP Control by Drug](bp_control_by_drug.png)"
+    "- **No dosage or duration data**: We only know whether a drug was reported in the past 30"
    ]
   },
   {
@@ -391,26 +387,6 @@
     "plt.ylabel(\"Drug Name\")\n",
     "plt.xlim(0, 1)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "3a46f022",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "plt.savefig(\"bp_control_by_drug.png\", dpi=300, bbox_inches=\"tight\")"
    ]
   }
  ],
